commit all changes for AdminCrud

--- a/MyNewsWeb/Views/Home/Admin.cshtml
+++ b/MyNewsWeb/Views/Home/Admin.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Admin";
+    ViewBag.Title = "Manage Users";
 }
 
 @section scripts {
@@ -8,5 +8,5 @@
     
     }
 
-<h2>Admin</h2>
+<h2>Manage Users</h2>
 
