--- a/MyNewsWeb/Views/Home/ManageUsers.cshtml
+++ b/MyNewsWeb/Views/Home/ManageUsers.cshtml
@@ -9,7 +9,7 @@
 }
 
 <h2>Manage All Users</h2>
-<div ng-app="userModule" ng-controller="userCtrl">
+<div ng-controller="userCtrl">
     <div class="container" style="text-align:left">
 
         <div class="row">
