--- a/MyNewsWeb/Views/News/ManageNews.cshtml
+++ b/MyNewsWeb/Views/News/ManageNews.cshtml
@@ -1,84 +1,76 @@
-﻿@model IEnumerable<MyNewsWeb.Models.GoodNew>
-@*@Scripts.Render("~/Scripts/myScript2.js")*@
+﻿@model IEnumerable<MyNewsWeb.Models.NewsViewModel>
+
 @{
     ViewBag.Title = "Manage News";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    
 }
 
-<div class="container">
-    <div class="bg-faded p-4 my-4">
-        <br />
-        <h2>News Management</h2>
+<h2>ManageNews</h2>
 
-        <p class="card-text text-shadow text-white w-50 d-none d-lg-block">
-            <a href="@Url.Action("Create","News")" class="btn btn-secondary">Add News</a>
-        </p>
-        @*<p class="card-text text-shadow text-white w-50 d-none d-lg-block">
-                <a href="@Url.Action("CreateIndividual","News")" class="btn btn-secondary">Create (logged in user)</a>
-            </p>*@
-        <select id="selectNews">
-            <option>Title</option>
-            <option>News Date</option>
-            <option>Content</option>
-            <option>News Type</option>
-            <option>Journalist Name</option>
-            <option>File Name</option>
-        </select>
+<p>
+    @Html.ActionLink("Create News", "Create")
+</p>
 
-        <table class="table" id="newsid">
-            <thead>
-                <tr>
-                    <th>
-                        Title
-                    </th>
-                    <th>
-                        News Date
-                    </th>
-                    <th>
-                        Content
-                    </th>
-                    <th>
-                        News Type
-                    </th>
-                    <th>
-                        Journalist Name
-                    </th>
-                    <th>
-                        File Name
-                    </th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model)
-            {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Title)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.NewsDate)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Content)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.NewsType)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.UserInfo.FirstName) @Html.DisplayFor(modelItem => item.UserInfo.FirstName)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.FileName)
-                        </td>
-                        <td width="27%">
-                            <a href="@Url.Action("Edit","News", new { id = item.Id })" class="btn btn-secondary">Edit</a> |
-                            <a href="@Url.Action("Details","News", new { id = item.Id })" class="btn btn-secondary">Details</a> |
-                            <a href="@Url.Action("Delete","News", new { id = item.Id })" class="btn btn-secondary">Delete</a>
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-</div>
+@if (Model.Count() == 0)
+{
+    <p>No News Available. Please create news first</p>
+}
+else
+{
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Title)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Content)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FileName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.NewsType)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.UserInfoId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.NewsDate)
+            </th>
+            <th></th>
+        </tr>
+
+        @foreach (var item in Model)
+        {
+            
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Content)
+                </td>
+                <td>
+                    <img src="@Url.Content("~/Content/Uploads/" + item.FileName)" alt="News Image Not Available" height="100" width="100"/>
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.NewsType)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.NewsDate)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+                </td>
+            </tr>
+        }
+
+    </table>
+}
+ 
+
