--- a/MyNewsWeb/Views/Shared/_Layout.cshtml
+++ b/MyNewsWeb/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Latest News", "Index", "News")</li>
+                    <li>@Html.ActionLink("Latest News", "ShowNews", "Home")</li>
                     <li>@Html.ActionLink("Manage Users","ManageUsers","Home")</li>
                     <li>@Html.ActionLink("Manage News", "ManageNews", "News")</li>
                     <li>@Html.ActionLink("Documentation", "About", "Home")</li>
