--- a/MyNewsWeb/Views/Home/ShowNews.cshtml
+++ b/MyNewsWeb/Views/Home/ShowNews.cshtml
@@ -5,25 +5,53 @@
 }
 
 <div class="container" ng-controller="newsCtrl">
-    <div class="well">
-        <div class="media">
-            <a class="pull-left" href="#">
-                <img alt="News Pic" src="@Html.ImageOrDefaultNews(item.FileName)" class="media-object" height="150" width="150">
-            </a>
-            <div class="media-body">
-                <h4 class="media-heading">@Html.DisplayFor(modelItem => item.Title)</h4>
-                <p class="text-right">
-                    @Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.LastName)
-                </p>
-                <p class="minimize">
-                    @Html.DisplayFor(modelItem => item.Content)
-                </p>
-                <ul class="list-inline list-unstyled">
-                    <li><span><i class="glyphicon glyphicon-calendar"></i>@Html.DisplayFor(modelItem => item.NewsDate)</span></li>
-                    <li>|</li>
-                    <span><i class="glyphicon glyphicon-comment"></i> <a data-toggle="modal" href="#commentModal" ng-click="openCommentModal()"> 0 comments</a></span>
+    <div ng-repeat="news in newsData">
+        <div class="well">
+            <div class="media">
+                <a class="pull-left" href="#">
+                    <div ng-if="news.FileName"> <img alt="News Picture Not Available" src="~/Content/Uploads/{{news.FileName}}" class="media-object" height="150" width="150"></div>
+                    <div ng-if="!news.FileName"> <img alt="News Picture Not Available" src="~/Content/DefaultNewsImage.png" class="media-object" height="150" width="150"></div>
+                </a>
+                <div class="media-body">
+                    <h4 class="media-heading">{{news.Title}}</h4>
+                    <p class="text-right">
+                        {{news.FirstName}} {{news.LastName}}
+                    </p>
+                    <p class="minimize">
+                        {{news.Content}}
+                    </p>
+                    <ul class="list-inline list-unstyled">
+                        <li><span><i class="glyphicon glyphicon-calendar"></i>{{news.NewsDate | date}}</span></li>
+                        <li>|</li>
+                        <span><i class="glyphicon glyphicon-comment"></i> <a data-toggle="modal" href="#commentModal" ng-click="openCommentModal(newsData[$index])"> comment here </a></span>
 
-                </ul>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="commentModal" role="dialog">
+        <div class="modal-dialog">
+            Modal content
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Post Your Comment</h4>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <textarea ng-model="UserComment.Comment" placeholder="Your Comment" style="width:550px"></textarea>
+                        <button ng-click="postComment()" style="margin-top:10px;" class="btn btn-primary">Post Comment</button>
+                        <h4>Comments</h4>
+                        <ul>
+                            <li ng-repeat="item in commentsData"><b>{{item.FirstName}} {{item.LastName}}'s Comment</b>: {{ item.Comment }} </li>
+                        </ul>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
             </div>
         </div>
     </div>
