--- a/MyNewsWeb/Views/News/ManageNews.cshtml
+++ b/MyNewsWeb/Views/News/ManageNews.cshtml
@@ -6,7 +6,7 @@
     
 }
 
-<h2>ManageNews</h2>
+<h2>Manage News</h2>
 
 <p>
     @Html.ActionLink("Create News", "Create")
@@ -18,8 +18,40 @@
 }
 else
 {
-    <table class="table">
-        <tr>
+    <select id="selectNews">
+        <option>Title</option>
+        <option>Content</option>
+        <option>News Image</option>
+        <option>News Type</option>
+        <option>Author</option>
+        <option>News Date</option>
+    </select>
+    <br>
+    <table class="table" id="newsid">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Title)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Content)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.FileName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.NewsType)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.UserInfoId)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.NewsDate)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tfoot>
             <th>
                 @Html.DisplayNameFor(model => model.Title)
             </th>
@@ -39,36 +71,37 @@ else
                 @Html.DisplayNameFor(model => model.NewsDate)
             </th>
             <th></th>
-        </tr>
+        </tfoot>
 
-        @foreach (var item in Model)
-        {
-            
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Title)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Content)
-                </td>
-                <td>
-                    <img src="@Url.Content("~/Content/Uploads/" + item.FileName)" alt="News Image Not Available" height="100" width="100"/>
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.NewsType)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.LastName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.NewsDate)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-                </td>
-            </tr>
-        }
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Title)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Content)
+                    </td>
+                    <td>
+                        <img src="@Url.Content("~/Content/Uploads/" + item.FileName)" alt="News Image Not Available" height="100" width="100" />
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.NewsType)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.LastName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.NewsDate)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    </td>
+                </tr>
+            }
+        </tbody>
 
     </table>
 }
