--- a/MyNewsWeb/Views/Shared/_Layout.cshtml
+++ b/MyNewsWeb/Views/Shared/_Layout.cshtml
@@ -44,9 +44,7 @@
         </footer>
     </div>
 
-    @*@Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @Scripts.Render("~/bundles/angular")
-    @RenderSection("scripts", required: false)*@
+    @Scripts.Render("~/bundles/pdfgenerator")
+    @Scripts.Render("~/bundles/reCAPTCHA")
 </body>
 </html>
