--- a/MyNewsWeb/Content/bootstrap.css
+++ b/MyNewsWeb/Content/bootstrap.css
@@ -4934,7 +4934,8 @@ a.list-group-item.active > .badge,
   font-weight: 200;
   line-height: 2.1428571435;
   color: inherit;
-  background-color: #eeeeee;
+  background-image:url(/Content/images/news.png);
+  background-size:cover;
 }
 
 .jumbotron h1 {
