--- a/MyNewsWeb/Views/Home/About.cshtml
+++ b/MyNewsWeb/Views/Home/About.cshtml
@@ -1,7 +1,56 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Documentation";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<div class="container">
+    <div class="bg-faded p-4 my-4">
+        <div class="m-2">
+            <h2 class="card-title text-shadow text-black text-uppercase mb-0">Website Documentation</h2>
+            <br />
+            <table>
+                <tr>
+                    <th width="15%">Author Information</th>
+                    <td class="text-shadow text-black" width="50%" colspan="5">
+                        Di Zou,26840863,FIT5032<br />
+                        <a href="https://mail.google.com/mail/u/1/?tab=wm#inbox?compose=15f1fa423b6eb08f">dZou6@student.monash.edu</a><br/>
+                        Monash University,The Caufiled School of Information Technology<br />
+                        Credit Task<br />
+                        ABM Russel<br/>
+                        <a href="https://mail.google.com/mail/u/1/?tab=wm#inbox?compose=15f1fa246f3d6ca4">ABM.Russel@monash.edu</a>
+                        <br/>
+                        <a href="http://moodle.vle.monash.edu/mod/page/view.php?id=4154651">Task Specification</a><br />
+
+                    </td>
+                </tr>
+                <tr>
+                    <th width="15%">Image Information</th>
+                    <td width="18%" class="text-shadow text-black">
+                        <img src="~/Content/images/news.png" width="100px" height="100px" /><br />
+                        <a href="https://www.google.com.au/search?q=news+background+pictures&rlz=1C1CHBF_en-GBAU755AU755&tbm=isch&tbo=u&source=univ&sa=X&ved=0ahUKEwimoaKX2_LWAhUGmZQKHfgiB20QsAQIJw&biw=1289&bih=586#imgrc=21iktdhY8FRW4M:">Check Source</a>
+                    </td>
+
+                    <td width="18%" class="text-shadow text-black">
+                        <img src="~/Content/images/news_background.png" width="100px" height="100px" /><br />
+                        <a href="https://startbootstrap.com/template-overviews/business-casual/">Check Source</a>
+                    </td>
+
+                    <td width="18%" class="text-shadow text-black">
+                        <img src="~/img/slide-1.jpg" width="100px" height="100px" /><br />
+                        <a href="https://startbootstrap.com/template-overviews/business-casual/">Check Source</a>
+                    </td>
+
+                    <td width="18%" class="text-shadow text-black">
+                        <img src="~/img/slide-2.jpg" width="100px" height="100px" /><br />
+                        <a href="https://startbootstrap.com/template-overviews/business-casual/">Check Source</a>
+                    </td>
+
+                    <td width="18%" class="text-shadow text-black">
+                        <img src="~/img/slide-3.jpg" width="100px" height="100px" /><br />
+                        <a href="https://startbootstrap.com/template-overviews/business-casual/">Check Source</a>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
+</div>
