--- a/MyNewsWeb/Views/Home/Index.cshtml
+++ b/MyNewsWeb/Views/Home/Index.cshtml
@@ -2,9 +2,12 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>Welcome</h1>
-    <p class="lead">Austraila's #1 Website to Give You Latest Good News</p>
+<div class="jumbotron" img src="~/Content/images/news.png">
+    <br />
+    <br />
+    <br />
+    <br /><br /><br /><br /><br />
+    <br />
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
